# CData

./: .gitignore  .markdownlint.json  README.md
Articles/: 001.md  002.md
CPP_from_LETI/: README.md
C_for_beginners/: 02.md  03.md  04.md  05.md  06.md  2.md  README.MD
C_for_beginners_Stepik/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  README.md
C_for_sports_programming/: 00.md  01.cpp  01.md  README.md
Good_good_C_C++/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  About.md  README.MD
Introduction_to_Programming_Cpp/: 01.cpp  01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  README.MD
LearnCinfo/: 01_about.md  02_history.md  03_firststeps.md  04_firststeps_nix.md  05_variables.md  06_assignment.md  07_formatted_input_output.md  08_branches.md  09_switch.md  10_logic_operators.md  11_loop.md  12_arrays.md  13_multidimensional_arrays.md  14_strings.md  15_pointers.md  16_const_pointers.md  17_arrays_vs_pointers.md  18_macros.md  19_inttypes.md  20_ternary_and_comma_operators.md  21_debug.md  22_program_structure.md  23_memory_allocation.md  24_cmd.md  25_functions.md  26_function_call.md  27_void_pointers.md  28_function_pointers.md  29_function_arguments.md  30_bitwise_operators.md  31_mastering_strings.md  32_random.md  36_storage_class.md  39_fast_array_allocation.md  README.md
Materials/: README.MD
OOP_C_C++/: 01.md  02.md  03.md  04.md  README.md
Qt/: README.md
School/: README.MD
School/CPP3_BrickGame_v2.0/src/: CMakeLists.txt  Makefile  README.md  cli_controller.h  desktop_controller.h  game_params.h  main.cpp
School/CPP3_BrickGame_v2.0/src/brick_game/snake/: snake_game.cpp  snake_game.h
School/CPP3_BrickGame_v2.0/src/brick_game/tetris/: tetris_game.cpp  tetris_game.h
School/CPP3_BrickGame_v2.0/src/gui/cli/: cli_view.cpp  cli_view.h
School/CPP3_BrickGame_v2.0/src/gui/desktop/: desktop_view.cpp  desktop_view.h  desktop_view.ui
School/CPP3_BrickGame_v2.0/src/test/: test.cpp  test.h
(+1010 files in other folders)
